--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first Bitstarter</title>
+    <title>MetaJS: logos-oriented lisp compiled to javascript</title>
 
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -132,27 +132,25 @@
     <div class="container">
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>MetaJS</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
-           <p class="lead">One sentence description.</p>
+           <p class="lead">Logos-oriented lisp compiled to javascript.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
-        </div><!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
+          <img class="img-polaroid" src="http://placehold.it/480x300&text=Logos">
+        </div>
+	<!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
           <div class="span8 offset2">
             <div class="statistics">
               <div class="span4">
-                <!-- linediv-l and linediv-r give dividing lines that look
-                     different in horizontal and vertical layouts, illustrating
-                     media queries. -->
                 <div class="linediv-l">
-                  <h3>1000</h3>
+                  <h3>13</h3>
                   <p>
 		    backers
                   </p>
@@ -160,13 +158,13 @@
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3>
-                  <p>of $10,000</p>
+                  <h3>$42</h3>
+                  <p>of $30,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                  <h3>10</h3>
+                  <h3>34</h3>
                   <p>days left</p>
                 </div>
               </div>
@@ -195,11 +193,11 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://placehold.it/480x300&text=Lisp">
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla ante lectus, a pellentesque lacus dignissim ac. Sed volutpat lorem ut congue malesuada. In facilisis scelerisque turpis sed lacinia. Donec in orci lectus. Donec auctor semper quam, eget rhoncus purus fringilla id. Phasellus id nibh eu risus ultrices adipiscing. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla.
+	    
           </p>
         </div>
       </div>
@@ -210,7 +208,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://placehold.it/480x300&text=Javascript">
         </div>
       </div>
 
