--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <button class="btn btn-success btn-large">Donate</button>
           </div>
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
@@ -193,22 +193,21 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300&text=Lisp">
+          <img class="img-polaroid" src="http://placehold.it/480x100&text=Lisp">
         </div>
         <div class="span5 copy">
-          <p>
-	    
-          </p>
+          <h4>Write on lisp.</h4>
+	  <h4>Compile to pure javascript without runtime dependenices.</h4>
         </div>
       </div>
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla ante lectus, a pellentesque lacus dignissim ac. Sed volutpat lorem ut congue malesuada. In facilisis scelerisque turpis sed lacinia. Donec in orci lectus. Donec auctor semper quam, eget rhoncus purus fringilla id. Phasellus id nibh eu risus ultrices adipiscing. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
+	  <h4>Use same code in browser and on server.</h4>
+	  <h4>Enjoy logos-powered compiler that can guess what you mean and
+	    generate missed parts of code.</h4>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300&text=Javascript">
+          <img class="img-polaroid" src="http://placehold.it/480x100&text=Javascript">
         </div>
       </div>
 
@@ -222,21 +221,23 @@
           <div class="accordion" id="accordion2">
             <div class="accordion-group">
               <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">What does FAQ stand for?</a>
+                <a class="accordion-toggle" data-toggle="collapse"
+                data-parent="#accordion2" href="#collapseOne">What is Lisp?</a>
               </div>
               <div id="collapseOne" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  Frequently Asked Question
+                  Lisp is best language ever.
                 </div>
               </div>
             </div>
             <div class="accordion-group">
               <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">What's a Frequently Asked Question?</a>
+                <a class="accordion-toggle" data-toggle="collapse"
+                data-parent="#accordion2" href="#collapseTwo">What is Javascript?</a>
               </div>
               <div id="collapseTwo" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  A question which is commonly asked by users.
+		  Javascript is language of the Web.
                 </div>
               </div>
             </div>
