Changed to BTC (develop)

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$42</h3>
-                  <p>of $30,000</p>
+                  <h3>1.2</h3>
+                  <p>of 299BTC</p>
                 </div>
               </div>
               <div class="span4">
