--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MetaJS: logos-oriented lisp compiled to javascript</title>
+    <title>Coect: coact to connect</title>
 
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -137,12 +137,12 @@
     <div class="container">
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>MetaJS</h1>
+          <h1>coect</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
-           <p class="lead">Logos-oriented lisp compiled to javascript.</p>
+           <p class="lead"><strong>co</strong>act to conn<strong>ect<strong></p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -216,6 +216,7 @@
           <img class="img-polaroid" src="http://placehold.it/480x100&text=Lisp">
         </div>
         <div class="span5 copy">
+	  <h4>MetaJS is logos-oriented lisp compiled to javascript.</h4>
           <h4>Write on lisp.</h4>
 	  <h4>Compile to pure javascript without runtime dependenices.</h4>
         </div>
