--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="container">
           <button type="button" class="btn btn-navbar" data-toggle="collapse"
           data-target=".nav-collapse"></button>
-	  <a class="brand" href="#">Bitstarter</a>
+	  <a class="brand" href="#">coect</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active">
